fix: make links available on z-index (#9)

--- a/docs/.vuepress/styles/sidebar.styl
+++ b/docs/.vuepress/styles/sidebar.styl
@@ -1,5 +1,5 @@
 .theme-container .sidebar {
-	z-index: 1;
+	z-index: 9;
 	width: 340px;
 	padding-top: 100px;
 	padding-left: 40px;
